--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,10 @@
 [versions]
 agp = "8.3.0-alpha07"
+androidx-hilt-navigation-compose = "1.1.0"
+androidx-lifecycle-viewmodel-compose = "2.6.2"
+androidx-room-compiler = "2.6.0"
+androidx-room-ktx = "2.6.0"
+androidx-room-runtime = "2.6.0"
 hilt-android = "2.48.1"
 kotlin = "1.9.20"
 core-ktx = "1.12.0"
@@ -12,14 +17,10 @@ compose-bom = "2023.10.01"
 google-services = "4.4.0"
 coil-compose = "2.4.0"
 
-lifecycle-viewmodel-compose="2.6.2"
+
 firebase-storage-ktx = "20.3.0"
 navigation-compose = "2.7.5"
-hilt-navigation-compose= "1.0.0"
-firebase-bom="29.0.3"
-room-runtime="2.6.0"
-room-ktx="2.6.0"
-room-compiler="2.6.0"
+
 ksp = "1.9.20-1.0.14"
 
 
@@ -36,6 +37,11 @@ ksp = "1.9.20-1.0.14"
 
 
 [libraries]
+androidx-hilt-navigation-compose-v100 = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
+androidx-lifecycle-viewmodel-compose-v262 = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-viewmodel-compose" }
+androidx-room-compiler-v260 = { module = "androidx.room:room-compiler", version.ref = "androidx-room-compiler" }
+androidx-room-ktx-v260 = { module = "androidx.room:room-ktx", version.ref = "androidx-room-ktx" }
+androidx-room-runtime-v260 = { module = "androidx.room:room-runtime", version.ref = "androidx-room-runtime" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt-android" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -52,17 +58,11 @@ ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
 
-hilt-navigation-compose={group="androidx.hilt:hilt-navigation-compose",name="hilt-navigation-compose",version.ref="hilt-navigation-compose"}
-lifecycle-viewmodel-compose={group="androidx.lifecycle:lifecycle-viewmodel-compose",name="lifecycle-viewmodel-compose",version.ref="lifecycle-viewmodel-compose"}
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebase-storage-ktx" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation-compose" }
-firebase-bom={group="com.google.firebase:firebase-bom",name="firebase-bom",version.ref="firebase-bom"}
-room-runtime={group="androidx.room:room-runtime",name="room-runtime",version.ref="room-runtime"}
-room-ktx={group="androidx.room:room-ktx",name="room-ktx",version.ref="room-ktx"}
-room-compiler={group="androidx.room:room-compiler",name="room-compiler",version.ref="room-compiler"}
-ksp = { group = "com.google.devtools.ksp", name = "ksp", version.ref = "ksp" }
+
 hiltAndroidCompiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-android" }
-hiltCompiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt-android" }
+
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
 
 
