--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanist-navigation-compose = "0.26.0"
 agp = "8.3.0-alpha07"
 androidx-hilt-navigation-compose = "1.1.0"
 androidx-lifecycle-viewmodel-compose = "2.6.2"
@@ -37,6 +38,7 @@ ksp = "1.9.20-1.0.14"
 
 
 [libraries]
+accompanist-navigation-compose = { module = "com.google.accompanist:accompanist-navigation-compose", version.ref = "accompanist-navigation-compose" }
 androidx-hilt-navigation-compose-v100 = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
 androidx-lifecycle-viewmodel-compose-v262 = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-viewmodel-compose" }
 androidx-room-compiler-v260 = { module = "androidx.room:room-compiler", version.ref = "androidx-room-compiler" }
